--- a/package.json
+++ b/package.json
@@ -2,30 +2,29 @@
   "name": "t-p-final",
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "ng build --output-path angularapp --aot --prod",
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path angularapp --aot --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.6",
-    "@angular/cli": "~11.2.5",
-    "@angular/common": "~11.2.6",
-    "@angular/compiler": "~11.2.6",
-    "@angular/compiler-cli": "~11.2.6",
-    "@angular/core": "~11.2.6",
-    "@angular/fire": "^6.1.4",
-    "@angular/forms": "~11.2.6",
-    "@angular/platform-browser": "~11.2.6",
-    "@angular/platform-browser-dynamic": "~11.2.6",
-    "@angular/router": "~11.2.6",
-    "d3": "^6.7.0",
+    "@angular/animations": "~11.2.10",
+    "@angular/cli": "~11.2.9",
+    "@angular/common": "~11.2.10",
+    "@angular/compiler": "~11.2.10",
+    "@angular/compiler-cli": "~11.2.10",
+    "@angular/core": "~11.2.10",
+    "@angular/fire": "^6.1.5",
+    "@angular/forms": "~11.2.10",
+    "@angular/platform-browser": "~11.2.10",
+    "@angular/platform-browser-dynamic": "~11.2.10",
+    "@angular/router": "~11.2.10",
     "express": "^4.17.1",
-    "firebase": "^8.4.1",
+    "firebase": "^8.6.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -33,10 +32,9 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.10",
-    "@angular/cli": "~11.2.5",
-    "@angular/compiler-cli": "~11.2.6",
-    "@types/d3": "^6.3.0",
+    "@angular-devkit/build-angular": "~0.1102.9",
+    "@angular/cli": "~11.2.9",
+    "@angular/compiler-cli": "~11.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -53,7 +51,7 @@
     "typescript": "~4.1.5"
   },
   "engines": {
-    "node": "v14.16.0",
-    "npm": "6.14.11"
+    "node": "v14.16.1",
+    "npm": "6.14.12"
   }
 }
